# NGFWTrafficGen

./: BUILD_NOTES.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  TCP_STATE_MACHINE.md  errors.txt  main.cpp
control/grpc/: server.cpp  server.hpp
control/python_client/: client.py  rfc2544_runner.py
core/common/: types.hpp
core/mempools/: mempool_manager.cpp  mempool_manager.hpp
core/packet/: packet_builder.cpp  packet_builder.hpp  packet_mutator.cpp  packet_mutator.hpp
core/scheduler/: flow_scheduler.cpp  flow_scheduler.hpp  imix_engine.cpp  imix_engine.hpp  token_bucket.cpp  token_bucket.hpp
core/stateful/: tcp_state.cpp  tcp_state.hpp
core/stats/: metrics_collector.cpp  metrics_collector.hpp
core/worker/: worker.cpp  worker.hpp
proto/: traffic_generator.proto
util/config/: config_parser.cpp  config_parser.hpp
